--- a/lab2/src/page2/style.css
+++ b/lab2/src/page2/style.css
@@ -100,6 +100,7 @@ footer p {
 
 .main_section {
     background-image: url(../images/main-bg.png);
+    overflow-y: hidden;
 }
 
 .upper_section {
@@ -136,7 +137,7 @@ footer p {
 }
 
 .main_section_image img {
-    width: 608px;
+    width: 44%;
     justify-self: center;
 }
 
