--- a/lab2/src/page3/style.css
+++ b/lab2/src/page3/style.css
@@ -6,9 +6,14 @@
 
 html,
 body {
-    height: 100vh;
-    display: table;
+    height: 100%;
     width: 100%;
+    overflow-y: hidden;
+}
+
+main {
+    width: 100%;
+    height: 70%;
 }
 
 .header_table,
@@ -27,12 +32,14 @@ footer {
 }
 
 header {
+    height: 15%;
     background-image: url(../images/Header-background-3.png);
-    background-size: 14%;
+    background-size: 12%;
     text-align: end;
 }
 
 footer {
+    height: 15%;
     background-image: url(../images/Background.webp);
     background-size: 550px;
     background-position: center 10%;
@@ -88,8 +95,9 @@ nav ul li a:hover {
     padding-right: 8px;
 }
 
-.main_table{
-    height: auto;
+.main_section_cell {
+    background-image: url(../images/main-bg.png);
+    text-align: center;
 }
 
 .upper_section {
@@ -101,23 +109,20 @@ nav ul li a:hover {
     width: 100%;
 }
 
-.main_section_cell {
-    background-image: url(../images/main-bg.png);
-    text-align: center;
+.lower_section {
+    width: 100%;
+}
+
+.center_section {
+    width: 80%;
 }
 
 .right_side {
-    width: 20%;
     background-image: url(../images/rightSide.jpeg);
     background-size: 100%;
-    display: table-cell;
+    width: 20%;
     border-left: #000 2px solid;
     border-bottom: 2px solid black;
-}
-
-.lower_sections {
-    display: table;
-    width: 100%;
 }
 
 .main_section_info {
@@ -128,21 +133,13 @@ nav ul li a:hover {
     border-bottom: 2px solid black;
 }
 
-.main_section_image {
-    display: table;
-    margin: 0 auto;
-}
-
 .main_section_image img {
-    width: 80%;
-    height: auto;
-    display: table-cell;
     vertical-align: middle;
+    width: 45%;
 }
 
 .left_side {
     color: white;
-    display: table-cell;
     background-image: url(../images/Background.webp);
     background-size: 550px;
     filter: brightness(1.4);
