--- a/lab3/src/style.css
+++ b/lab3/src/style.css
@@ -25,7 +25,7 @@ html {
 
 header {
     background-image: url(images/Header-background.png);
-    background-size: 14%;
+    background-size: 65%;
     color: white;
     width: 100%;
     padding: 60px 20px;
@@ -38,7 +38,6 @@ footer {
     background-image: url(images/Background.webp);
     background-size: 550px;
     background-position: center 10%;
-    filter: brightness(1.4);
     color: white;
     width: 100%;
     padding: 40px 20px;
@@ -50,7 +49,7 @@ footer {
 .upper_logo{
     background-color: white;
     color: #000;
-    width: 15%;
+    width: fit-content;
     border: 2px solid black;
 }
 
@@ -167,25 +166,24 @@ aside {
     align-items: center;
     background-image: url(images/Background.webp);
     background-size: 550px;
-    filter: brightness(1.4);
     border-right: #000 2px solid;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (min-width: 351px) and (max-width: 700px) {
     aside {
+        padding-top: 20px;
         width: 100%;
         border: none;
         order: 2;
-        padding-top: 20px;
     }
 
     header {
         padding: 0;
         background-size: 50%;
     }
-    
-    .upper_logo {
-        width: 25%;
+
+    .footer_logo {
+        width: fit-content;
     }
 
     main {
@@ -194,5 +192,35 @@ aside {
 
     section {
         width: 100%;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    header {
+        background-size: 300%;
+        flex-direction: column;
+    }
+
+    .upper_logo {
+        margin-top: 12px;
+    }
+
+    main {
+        flex-direction: column;
+    }  
+
+    aside {
+        padding-top: 20px;
+        width: 100%;
+        border: none;
+        order: 2;
+    }
+
+    .footer_logo {
+        width: fit-content;
+    }
+
+    footer {
+        flex-direction: column;
     }
 }
