--- a/lab4/src/style.css
+++ b/lab4/src/style.css
@@ -1,6 +1,7 @@
 html, 
 body {
     margin: 0;
+    width: 100%;
     height: 100%;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -67,7 +68,7 @@ main {
     color: rgb(91, 115, 250);
     margin: 35px;
     padding: 40px;
-    width: 300px;
+    width: fit-content;
     text-align: center;
     border-radius: 5%;
 }
@@ -102,6 +103,23 @@ button:hover {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
+@media screen and (min-width: 901px) and (max-width: 1350px) {
+    .leftblock,
+    .middleblock,
+    .rightblock {
+        width: 200px;
+        margin: 20px;
+        padding: 25px;
+    }
+
+    .leftblock img,
+    .middleblock img,
+    .rightblock img {
+        width: 200px;
+        height: 150px;
+    }
+}
+
 @media screen and (max-width: 900px) {
     .blocks {
         flex-direction: column;
@@ -118,7 +136,37 @@ button:hover {
     .leftblock,
     .middleblock,
     .rightblock {
-        width: 500px;
+        width: fit-content;
+        margin: 20px;
+        padding: 15px;
     }
 }
 
+@media screen and (max-width: 400px) {
+    .blocks {
+        flex-direction: column;
+    }
+
+    .main-text {
+        width: 60%;
+    }
+
+    main {
+        height: fit-content;
+    }
+
+    .leftblock,
+    .middleblock,
+    .rightblock {
+        width: fit-content;
+        margin: 20px;
+        padding: 15px;
+    }
+
+    .leftblock img,
+    .middleblock img,
+    .rightblock img {
+        width: 200px;
+        height: 150px;
+    }
+}
