--- a/lab6/src/page2/style.css
+++ b/lab6/src/page2/style.css
@@ -44,6 +44,10 @@ header {
     width: 130px;
 }
 
+.header-logo img:hover {
+    cursor: pointer;
+}
+
 header h3 {
     margin-right: 50px;
     letter-spacing: 5px;
@@ -181,6 +185,13 @@ footer div img:hover {
     display: flex;
     border-left: #000 2px solid;
     border-bottom: 2px solid black;
+    justify-content: center;
+    align-items: center;
+}
+
+.right_side img {
+    width: 200px;
+    height: 300px;
 }
 
 .main_section {
@@ -206,4 +217,76 @@ aside {
     align-items: center;
     border-right: #000 2px solid;
     border-bottom: #000 2px solid;
+}
+
+@media screen and (max-width: 1200px) {
+    main {
+        flex-direction: column;
+    }
+
+    aside img {
+       display: none;
+    }
+
+    .upper_section {
+        box-shadow: inset 0px 0px 0px rgba(0,0,0,0.5);
+    }
+
+    .center_section {
+        width: 100%;
+    }
+
+    .center_section_content {
+        box-shadow: inset 0px 0px 0px rgba(0,0,0,0.5);
+        background: linear-gradient(to right, #3a3a3ae6, #000000);
+    }
+
+    .right_side {
+        display: none;
+    }
+
+}
+
+@media screen and (max-width: 900px) {
+
+    .upper_section h1 {
+        font-size: 50px;
+    }
+
+    .main_section_info {
+        font-size: large;
+        background-size: 200%;
+    }
+}
+
+@media screen and (max-width: 700px) {
+
+    .header-logo img{
+        margin-left: 5px;
+    }
+
+    .main_section_info {
+        font-size: small;
+        letter-spacing: 2px;
+        background-position: center 47%;
+    }
+
+    footer {
+        flex-direction: column;
+    }
+
+    footer div {
+        flex-direction: column;
+        margin-top: 10px;
+    }
+
+}
+
+@media screen and (max-width: 380px) {
+
+    .main_section_info {
+        font-size: small;
+        letter-spacing: 2px;
+        background-position: center 40%;
+    }
 }
