--- a/lab6/src/style.css
+++ b/lab6/src/style.css
@@ -44,6 +44,10 @@ header {
     width: 130px;
 }
 
+.header-logo img:hover {
+    cursor: pointer;
+}
+
 header h3 {
     margin-right: 50px;
     letter-spacing: 5px;
@@ -182,9 +186,6 @@ input {
     font-size: large;
 }
 
-/*====================*/
-
-
 /*=====buttons========*/
 
 .dropdownForm .formButton {
@@ -219,6 +220,13 @@ input {
     display: flex;
     border-left: #000 2px solid;
     border-bottom: 2px solid black;
+    justify-content: center;
+    align-items: center;
+}
+
+.right_side img {
+    width: 200px;
+    height: 300px;
 }
 
 .main_section_info{
@@ -242,58 +250,78 @@ aside {
     border-bottom: #000 2px solid;
 }
 
-/*@media screen and (min-width: 351px) and (max-width: 700px) {
-    aside {
-        padding-top: 20px;
-        width: 100%;
-        border: none;
-        order: 2;
-    }
-
-    header {
-        padding: 0;
-        background-size: 50%;
-    }
-
-    .footer_logo {
-        width: fit-content;
-    }
-
+@media screen and (max-width: 1200px) {
     main {
         flex-direction: column;
     }
 
-    section {
+    aside img {
+       display: none;
+    }
+
+    .upper_section {
+        box-shadow: inset -10px 0px 10px rgba(0,0,0,0.5);
+    }
+
+    .upper_section h1 {
+        margin-left: 0px;
+    }
+
+    .center_section {
         width: 100%;
+    }
+
+    .right_side {
+        display: none;
+    }
+
+}
+
+@media screen and (max-width: 900px) {
+
+    .upper_section h1 {
+        font-size: 50px;
+    }
+
+    .main_section_info {
+        font-size: large;
+        background-size: 200%;
     }
 }
 
-@media screen and (max-width: 350px) {
-    header {
-        background-size: 300%;
-        flex-direction: column;
+@media screen and (max-width: 700px) {
+
+    .header-logo img{
+        margin-left: 5px;
     }
 
-    .upper_logo {
-        margin-top: 12px;
+    .upper_section h1 {
+        font-size: 20px;
+        margin-left: 50px;
     }
 
-    main {
-        flex-direction: column;
-    }  
-
-    aside {
-        padding-top: 20px;
-        width: 100%;
-        border: none;
-        order: 2;
-    }
-
-    .footer_logo {
-        width: fit-content;
+    .main_section_info {
+        font-size: small;
+        letter-spacing: 2px;
+        background-position: center 47%;
     }
 
     footer {
         flex-direction: column;
+    }
+
+    footer div {
+        flex-direction: column;
+        margin-top: 10px;
+    }
+
+}
+
+@media screen and (max-width: 380px) {
+
+    .main_section_info {
+        font-size: small;
+        letter-spacing: 2px;
+        background-position: center 40%;
     }
 }
