--- a/lab6/src/page2/style.css
+++ b/lab6/src/page2/style.css
@@ -245,6 +245,9 @@ aside {
         display: none;
     }
 
+    .burger-menu {
+        width: 200px;
+    }
 }
 
 @media screen and (max-width: 900px) {
