--- a/lab6/src/page2/style.css
+++ b/lab6/src/page2/style.css
@@ -268,6 +268,10 @@ aside {
         margin-left: 5px;
     }
 
+    header h3 {
+        margin-right: 5px;
+    }
+
     .main_section_info {
         font-size: small;
         letter-spacing: 2px;
